Fix for wide feature image distortions when restricted by max-width

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -171,6 +171,7 @@ footer.entry-meta {
 		margin: 0 auto 1em;
 		display: block;
 		max-width: 680px;
+		height: auto;
 		top: -1em;
 		position: relative;
 	}
